--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="600">
-    <Grid>
+    <Grid x:Name="container">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
@@ -25,37 +25,57 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+
+        <Grid.Resources>
+            <Style x:Key="style" TargetType="Button">
+                <Setter Property="Margin" Value="5" />
+                <Setter Property="FontSize" Value="25" />
+                <Setter Property="FontWeight" Value="Bold" />
+                <Setter Property="Background">
+                    <Setter.Value>
+                        <LinearGradientBrush>
+                            <GradientStop Color="LightBlue" Offset="1" />
+                            <GradientStop Color="LightCyan" Offset="0" />
+                        </LinearGradientBrush>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+        </Grid.Resources>
+        
         <Image x:Name="pic" Grid.Column="5" Grid.ColumnSpan="3" HorizontalAlignment="Left" 
                Grid.RowSpan="2" VerticalAlignment="Top"/>
 
-        <Label Content="Tries left: " />
         <TextBlock x:Name="word" Grid.Column="2" Grid.ColumnSpan="3" FontSize="25" />
+        <Button x:Name="again" Height="50" Padding="5" VerticalAlignment="Center" Content="Try again" Click="again_Click"
+                Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" FontSize="20" Background="LightGreen" Visibility="Collapsed" />
 
-        <Button Grid.Column="0" Grid.Row="1" Content="A" Click="btnClick"/>
-        <Button Grid.Column="1" Grid.Row="1" Content="B" Click="btnClick"/>
-        <Button Grid.Column="0" Grid.Row="2" Content="C" Click="btnClick"/>
-        <Button Grid.Column="1" Grid.Row="2" Content="D" Click="btnClick"/>
-        <Button Grid.Column="2" Grid.Row="2" Content="E" Click="btnClick"/>
-        <Button Grid.Column="3" Grid.Row="2" Content="F" Click="btnClick"/>
-        <Button Grid.Column="4" Grid.Row="2" Content="G" Click="btnClick"/>
-        <Button Grid.Column="5" Grid.Row="2" Content="H" Click="btnClick"/>
-        <Button Grid.Column="6" Grid.Row="2" Content="I" Click="btnClick"/>
-        <Button Grid.Column="7" Grid.Row="2" Content="J" Click="btnClick"/>
-        <Button Grid.Column="0" Grid.Row="3" Content="K" Click="btnClick"/>
-        <Button Grid.Column="1" Grid.Row="3" Content="L" Click="btnClick"/>
-        <Button Grid.Column="2" Grid.Row="3" Content="M" Click="btnClick"/>
-        <Button Grid.Column="3" Grid.Row="3" Content="N" Click="btnClick"/>
-        <Button Grid.Column="4" Grid.Row="3" Content="O" Click="btnClick"/>
-        <Button Grid.Column="5" Grid.Row="3" Content="P" Click="btnClick"/>
-        <Button Grid.Column="6" Grid.Row="3" Content="Q" Click="btnClick"/>
-        <Button Grid.Column="7" Grid.Row="3" Content="R" Click="btnClick"/>
-        <Button Grid.Column="0" Grid.Row="4" Content="S" Click="btnClick"/>
-        <Button Grid.Column="1" Grid.Row="4" Content="T" Click="btnClick"/>
-        <Button Grid.Column="2" Grid.Row="4" Content="U" Click="btnClick"/>
-        <Button Grid.Column="3" Grid.Row="4" Content="V" Click="btnClick"/>
-        <Button Grid.Column="4" Grid.Row="4" Content="W" Click="btnClick"/>
-        <Button Grid.Column="5" Grid.Row="4" Content="X" Click="btnClick"/>
-        <Button Grid.Column="6" Grid.Row="4" Content="Y" Click="btnClick"/>
-        <Button Grid.Column="7" Grid.Row="4" Content="Z" Click="btnClick"/>
+        <Button Grid.Column="0" Grid.Row="1" Content="A" Click="btnClick" Style="{StaticResource style}" />
+        <Button Grid.Column="1" Grid.Row="1" Content="B" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="0" Grid.Row="2" Content="C" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="1" Grid.Row="2" Content="D" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="2" Grid.Row="2" Content="E" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="3" Grid.Row="2" Content="F" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="4" Grid.Row="2" Content="G" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="5" Grid.Row="2" Content="H" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="6" Grid.Row="2" Content="I" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="7" Grid.Row="2" Content="J" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="0" Grid.Row="3" Content="K" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="1" Grid.Row="3" Content="L" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="2" Grid.Row="3" Content="M" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="3" Grid.Row="3" Content="N" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="4" Grid.Row="3" Content="O" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="5" Grid.Row="3" Content="P" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="6" Grid.Row="3" Content="Q" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="7" Grid.Row="3" Content="R" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="0" Grid.Row="4" Content="S" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="1" Grid.Row="4" Content="T" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="2" Grid.Row="4" Content="U" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="3" Grid.Row="4" Content="V" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="4" Grid.Row="4" Content="W" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="5" Grid.Row="4" Content="X" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="6" Grid.Row="4" Content="Y" Click="btnClick" Style="{StaticResource style}"/>
+        <Button Grid.Column="7" Grid.Row="4" Content="Z" Click="btnClick" Style="{StaticResource style}"/>
+        
+        
     </Grid>
 </Window>
